<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/companyNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GIGM"
        android:textSize="@dimen/font_size_sixteen"/>

    <TextView
        android:id="@+id/resultCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:text="10 Results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyNameTextView" />

    <ImageView
        android:id="@+id/chevronIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chevron_right_ash"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:contentDescription="@string/chevron_icon"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N 500"
        android:textColor="@color/dark_text"
        android:textSize="@dimen/font_size_sixteen"
        app:layout_constraintEnd_toStartOf="@id/chevronIcon"
        android:layout_marginEnd="@dimen/sixteen_dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/twenty_four_dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:text="@string/onwards_text"
        android:layout_marginTop="@dimen/four_dp"
        app:layout_constraintEnd_toStartOf="@id/chevronIcon"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

    <ImageView
        android:contentDescription="@string/horizontal_line_text"
        android:src="@drawable/horizontal_ash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>